--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-google-maps/api": "^2.20.7",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-devtools": "^5.90.2",
     "class-variance-authority": "^0.7.1",
